AAE-38145: Implement process variable definitions retrieval and mapping