@@ -60,10 +60,13 @@ class ProcessDefinitionServiceTest {
 
     private ProcessExtensionService processExtensionService = Mockito.mock(ProcessExtensionService.class);
 
+    private ProcessVariableDefinitionMapper processVariableDefinitionMapper = new ProcessVariableDefinitionMapper();
+
     private final ProcessDefinitionService processDefinitionService = new ProcessDefinitionService(
         processRuntime,
         List.of(processDefinitionDecorator),
-        processExtensionService
+        processExtensionService,
+        processVariableDefinitionMapper
     );
 
     @Test
@@ -92,9 +95,9 @@ class ProcessDefinitionServiceTest {
 
         assertThat(result).hasSize(1);
         List<VariableDefinition> variableDefinitions =
-            ((ExtendedCloudProcessDefinition) result.get(0)).getVariableDefinitions();
+            ((ExtendedCloudProcessDefinition) result.getFirst()).getVariableDefinitions();
         assertThat(variableDefinitions).hasSize(1);
-        assertThat(variableDefinitions.get(0)).isEqualTo(variableDefinition);
+        assertThat(variableDefinitions.getFirst()).isEqualTo(variableDefinition);
         verify(processDefinitionDecorator)
             .decorate(argThat(argument -> argument.getId().equals(processDefinition.getId())));
     }
